--- a/VaccineC/src/app/shared/components/container/container.component.html
+++ b/VaccineC/src/app/shared/components/container/container.component.html
@@ -9,6 +9,10 @@
                     </li>
                 </ol>
             </nav>
+            <mat-chip-list aria-label="Fish selection" [hidden]="isInformationHidden">
+                <mat-chip>{{information}}</mat-chip>
+            </mat-chip-list>
+
         </div>
         <div class="is-section-content">
             <div class="is-card is-card-default-content">
