--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
@@ -2,7 +2,7 @@
   <app-side-menu></app-side-menu>
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
-    <app-container containerTitle="Formas Pagamento" containerPath="Cadastros">
+    <app-container containerTitle="Formas Pagamento" containerPath="Cadastros" [information]="informationField">
 
       <mat-tab-group #tabGroup>
 
