--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.scss
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.scss
@@ -48,3 +48,8 @@
     justify-content: space-between;
     align-items: center;
 }
+
+:host ::ng-deep .mat-chip {
+    font-size: 12px !important;
+    color: #858796 !important;
+  }
