--- a/VaccineC/src/app/pages/aplicacao/aplicacao.component.html
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao.component.html
@@ -2,7 +2,7 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Aplicação" containerPath="Operacional">
+        <app-container containerTitle="Aplicação" containerPath="Operacional" [information]="informationField">
             <mat-tab-group>
                 <mat-tab label="Pesquisa">
                     <app-aplicacao-pesquisa></app-aplicacao-pesquisa>
