--- a/VaccineC/src/app/pages/empresa/empresas.component.html
+++ b/VaccineC/src/app/pages/empresa/empresas.component.html
@@ -243,8 +243,12 @@
                                 <ng-container matColumnDef="Options">
                                     <th mat-header-cell *matHeaderCellDef> </th>
                                     <td mat-cell *matCellDef="let row">
-                                        <button mat-icon-button color="warn" title="Remover" (click)="deleteCompanySchedule(row.ID)" style="float:right;"><i
-                                                class="fa-solid fa-trash"></i></button>
+                                        <button mat-icon-button color="warn" title="Remover" (click)="deleteCompanySchedule(row.ID)" style="float:right;">
+                                            <i class="fa-solid fa-trash"></i>
+                                        </button>
+                                        <button mat-icon-button color="primary" title="Editar" (click)="openUpdateScheduleDialog(row.ID)" style="float:right;">
+                                            <i class="fa-solid fa-pen-to-square"></i>
+                                        </button>
                                     </td>
                                 </ng-container>
 
