--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
@@ -2,7 +2,7 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Movimentar Estoque" containerPath="Estoque">
+        <app-container containerTitle="Movimentar Estoque" containerPath="Estoque" [information]="informationField">
             <mat-tab-group>
                 <mat-tab label="Pesquisa"> 
                     <app-movimentar-estoque-pesquisa></app-movimentar-estoque-pesquisa>
