--- a/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
+++ b/VaccineC/src/app/pages/orcamentos/orcamentos.component.html
@@ -2,7 +2,7 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Orçamentos" containerPath="Operacional">
+        <app-container containerTitle="Orçamentos" containerPath="Operacional" [information]="informationField">
             <mat-tab-group>
                 <mat-tab label="Pesquisa">
                     <app-orcamento-pesquisa></app-orcamento-pesquisa>
