--- a/VaccineC/src/app/pages/produto/produto.component.html
+++ b/VaccineC/src/app/pages/produto/produto.component.html
@@ -2,7 +2,7 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
-        <app-container containerTitle="Produto" containerPath="Cadastros">
+        <app-container containerTitle="Produto" containerPath="Cadastros" [information]="informationField">
             <mat-tab-group>
                 <mat-tab label="Pesquisa">
                     <app-produto-pesquisa></app-produto-pesquisa>
