--- a/VaccineC/src/app/pages/visao-faturamento/visao-faturamento.component.html
+++ b/VaccineC/src/app/pages/visao-faturamento/visao-faturamento.component.html
@@ -2,7 +2,7 @@
   <app-side-menu></app-side-menu>
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
-    <app-container containerTitle="Visão de faturamento" containerPath="Gerencial">
+    <app-container containerTitle="Visão de faturamento" containerPath="Gerencial" [information]="informationField">
       <app-visao-faturamento-pesquisa></app-visao-faturamento-pesquisa>
     </app-container>
   </div>
