--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -225,7 +225,10 @@
                   <td mat-cell *matCellDef="let row">
                     <button mat-icon-button color="warn" title="Remover" style="float:right;">
                       <i class="fa-solid fa-trash"></i>
-                    </button>
+                  </button>
+                  <button mat-icon-button color="primary" title="Editar" style="float:right;">
+                      <i class="fa-solid fa-pen-to-square"></i>
+                  </button>
                   </td>
                 </ng-container>
 
@@ -280,7 +283,10 @@
                   <td mat-cell *matCellDef="let row">
                     <button mat-icon-button color="warn" title="Remover" style="float:right;">
                       <i class="fa-solid fa-trash"></i>
-                    </button>
+                  </button>
+                  <button mat-icon-button color="primary" title="Editar" style="float:right;">
+                      <i class="fa-solid fa-pen-to-square"></i>
+                  </button>
                   </td>
                 </ng-container>
 
