--- a/VaccineC/src/app/pages/pessoas/update-person-address-dialog.html
+++ b/VaccineC/src/app/pages/pessoas/update-person-address-dialog.html
@@ -67,5 +67,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button class="create-button" (click)="savePersonPhone()" cdkFocusInitial>Salvar</button>
+    <button mat-button class="create-button" (click)="updatePersonAddress()" cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
