--- a/VaccineC/src/app/pages/pessoas/update-person-phone-dialog.html
+++ b/VaccineC/src/app/pages/pessoas/update-person-phone-dialog.html
@@ -29,5 +29,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button class="create-button" cdkFocusInitial (click)="savePersonPhone()">Salvar</button>
+    <button mat-button class="create-button" cdkFocusInitial (click)="updatePersonPhone()">Salvar</button>
 </mat-dialog-actions>
