--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -200,7 +200,7 @@
                   </button>
 
                   <button mat-raised-button color="primary" id="btn-reset-password-user"
-                    (click)="openResetPasswordDialog()" [hidden]="isResetPasswordButtonHidden"><span
+                    (click)="openResetPasswordDialog()" hidden><span
                       class="fa-solid fa-retweet me-1 w-20px"></span><span>Redefinir Senha</span></button>
                 </div>
               </div>
