--- a/VaccineC/src/app/pages/minha-conta/password-dialog.html
+++ b/VaccineC/src/app/pages/minha-conta/password-dialog.html
@@ -1,21 +1,32 @@
 <h2 mat-dialog-title>Alterar Senha</h2>
 <mat-dialog-content class="mat-typography">
-    <form>
+    <form [formGroup]="userPasswordForm">
+
+        <mat-form-field [hidden]="true">
+            <input matInput formControlName="UserId" id="UserId" [(ngModel)]="UserId">
+        </mat-form-field>
+
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Informe a nova Senha</mat-label>
-                <input type="password" matInput #input maxlength="255" id="password" required="true">
+                <input type="password" matInput formControlName="Password" [maxlength]="255" id="Password" [(ngModel)]="Password" required>
+                <mat-error *ngIf="userPasswordForm.controls.Password.touched && userPasswordForm.controls.Password.invalid">
+                    <span *ngIf="userPasswordForm.controls.Password.errors?.required">A Senha é obrigatória.</span>
+                </mat-error>
             </mat-form-field>
         </div>
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Confirme a nova Senha</mat-label>
-                <input type="password" matInput #input maxlength="255" id="confirmPassword" required="true">
+                <input type="password" matInput formControlName="ConfirmPassword" [maxlength]="255" id="ConfirmPassword" [(ngModel)]="ConfirmPassword" required>            
+                <mat-error *ngIf="userPasswordForm.controls.ConfirmPassword.touched && userPasswordForm.controls.ConfirmPassword.invalid">
+                    <span *ngIf="userPasswordForm.controls.ConfirmPassword.errors?.required">A Confirmação da Senha é obrigatória.</span>
+                </mat-error>
             </mat-form-field>
         </div>
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Alterar</button>
+    <button mat-button cdkFocusInitial (click)="resetPassword()" class="create-button">Alterar</button>
 </mat-dialog-actions>
