--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
@@ -7,10 +7,10 @@
                 <div class="col-lg-4">
                     <div class="card mb-4 is-card">
                         <div class="card-body text-center">
-                            <img src="../../../assets/img/bg-profile-default.png" alt="avatar"
+                            <img src="{{userPersonProfilePic}}" alt="avatar"
                                 class="rounded-circle img-fluid" style="width: 150px;">
-                            <h5 class="my-3 text-gray-800">John Doe</h5>
-                            <p class="text-muted mb-4">john.doe@empresa.com</p>
+                            <h5 class="my-3 text-gray-800">{{userPersonName}}</h5>
+                            <p class="text-muted mb-4">{{userEmail}}</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <button mat-raised-button color="primary" (click)="openPasswordDialog()"><span class="fa-solid fa-pen-to-square me-1 w-20px"></span><span>Alterar Senha</span></button>
                             </div>
@@ -21,20 +21,11 @@
                     <div class="card mb-4 is-card">
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-sm-3 text-gray-800">
-                                    <p class="mb-0">Empresa</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0">Empresa LTDA</p>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
                                 <div class="col-sm-3">
                                     <p class="mb-0 text-gray-800">Nome Completo</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">John Doe</p>
+                                    <p class="text-muted mb-0">{{userPersonName}}</p>
                                 </div>
                             </div>
                             <hr>
@@ -43,7 +34,7 @@
                                     <p class="mb-0 text-gray-800">Função</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">Aplicador</p>
+                                    <p class="text-muted mb-0">{{userFunction}}</p>
                                 </div>
                             </div>
                             <hr>
@@ -52,7 +43,7 @@
                                     <p class="mb-0">E-mail</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">john.doe@empresa.com</p>
+                                    <p class="text-muted mb-0">{{userEmail}}</p>
                                 </div>
                             </div>
                             <hr>
@@ -61,7 +52,7 @@
                                     <p class="mb-0">Telefone</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">(097) 234-5678</p>
+                                    <p class="text-muted mb-0">{{userPersonPhone}}</p>
                                 </div>
                             </div>
                             <hr>
@@ -70,7 +61,7 @@
                                     <p class="mb-0">Endereço</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">Centro, Caxias do Sul, RS</p>
+                                    <p class="text-muted mb-0">{{userPersonAddress}}</p>
                                 </div>
                             </div>
                         </div>
