--- a/VaccineC/src/app/pages/pessoas/dialog-content-address-dialog.html
+++ b/VaccineC/src/app/pages/pessoas/dialog-content-address-dialog.html
@@ -10,6 +10,9 @@
                     <mat-option value="R">Residencial</mat-option>
                     <mat-option value="O">Outro</mat-option>
                 </mat-select>
+                <mat-error *ngIf="personAddressForm.controls.AddressType.touched && personAddressForm.controls.AddressType.invalid">
+                    <span *ngIf="personAddressForm.controls.AddressType.errors?.required">O Tipo de Endereço é obrigatório.</span>
+                </mat-error>
             </mat-form-field>
         </div>
 
@@ -18,6 +21,11 @@
                 <mat-label>CEP</mat-label>
                 <input (blur)="onBlurMethod()" matInput #AddressCodeInput [(ngModel)]="AddressCode" formControlName="AddressCode" maxlength="9" placeholder="00000-000" mask="00000-000" required>
                 <span matSuffix><img src="../../../../assets/img/correios-logo.png" style="height:15px;width:60px;"></span>
+                <mat-hint align="end">{{AddressCodeInput.value?.length || 0}}/9</mat-hint>
+                <mat-error *ngIf="personAddressForm.controls.AddressCode.touched && personAddressForm.controls.AddressCode.invalid">
+                    <span *ngIf="personAddressForm.controls.AddressCode.errors?.required">O CEP é obrigatório.</span>
+                    <span *ngIf="personAddressForm.controls.AddressCode.errors?.minlength">O CEP deve ter no mínimo 9 caracteres.</span>
+                </mat-error>
             </mat-form-field>
         </div>
 
@@ -25,6 +33,11 @@
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Logradouro</mat-label>
                 <input matInput #inputPublicPlace [(ngModel)]="PublicPlace" formControlName="PublicPlace" required [readonly]="isPlaceDistrictReadonly">
+                <mat-hint align="end">{{inputPublicPlace.value?.length || 0}}/255</mat-hint>
+                <mat-error *ngIf="personAddressForm.controls.PublicPlace.touched && personAddressForm.controls.PublicPlace.invalid">
+                    <span *ngIf="personAddressForm.controls.PublicPlace.errors?.required">O Logradouro é obrigatório.</span>
+                    <span *ngIf="personAddressForm.controls.PublicPlace.errors?.maxlength">O Logradouro deve ter no máximo 255 caracteres.</span>
+                </mat-error>
             </mat-form-field>
         </div>
 
@@ -32,6 +45,11 @@
             <mat-form-field appearance="fill" class="col-sm-12">
                 <mat-label>Bairro</mat-label>
                 <input matInput #inputDistrict [(ngModel)]="District" formControlName="District" required [readonly]="isPlaceDistrictReadonly">
+                <mat-hint align="end">{{inputDistrict.value?.length || 0}}/255</mat-hint>
+                <mat-error *ngIf="personAddressForm.controls.District.touched && personAddressForm.controls.District.invalid">
+                    <span *ngIf="personAddressForm.controls.District.errors?.required">O Bairro é obrigatório.</span>
+                    <span *ngIf="personAddressForm.controls.District.errors?.maxlength">O Bairro deve ter no máximo 255 caracteres.</span>
+                </mat-error>
             </mat-form-field>
         </div>
 
@@ -39,16 +57,23 @@
             <mat-form-field appearance="fill" class="col-sm-8">
                 <mat-label>Cidade</mat-label>
                 <input matInput #inputCity [(ngModel)]="City" formControlName="City" required [readonly]="isCityStateReadonly">
+                <mat-hint align="end">{{inputCity.value?.length || 0}}/255</mat-hint>
+                <mat-error *ngIf="personAddressForm.controls.City.touched && personAddressForm.controls.City.invalid">
+                    <span *ngIf="personAddressForm.controls.City.errors?.required">A Cidade é obrigatória.</span>
+                    <span *ngIf="personAddressForm.controls.City.errors?.maxlength">A Cidade deve ter no máximo 255 caracteres.</span>
+                </mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="col-sm-2">
                 <mat-label>UF</mat-label>
-                <input matInput #inputState [(ngModel)]="State" formControlName="State" required [readonly]="isCityStateReadonly">
+                <input matInput #inputState [(ngModel)]="State" maxlength="2" formControlName="State" required [readonly]="isCityStateReadonly">
+                <mat-hint align="end">{{inputState.value?.length || 0}}/2</mat-hint>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="col-sm-2">
                 <mat-label>Nº</mat-label>
-                <input type="number" matInput #AddressNumberInput formControlName="AddressNumber" [(ngModel)]="AddressNumber" required>
+                <input type="number" maxlength="10" mask="9999999999" matInput #AddressNumberInput formControlName="AddressNumber" [(ngModel)]="AddressNumber" required>
+                <mat-hint align="end">{{AddressNumberInput.value?.length || 0}}/10</mat-hint>
             </mat-form-field>
         </div>
 
@@ -61,6 +86,11 @@
             <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>País</mat-label>
                 <input matInput #CountryInput formControlName="Country" [(ngModel)]="Country" required [readonly]="isCityStateReadonly">
+                <mat-hint align="end">{{CountryInput.value?.length || 0}}/255</mat-hint>
+                <mat-error *ngIf="personAddressForm.controls.Country.touched && personAddressForm.controls.Country.invalid">
+                    <span *ngIf="personAddressForm.controls.Country.errors?.required">O País é obrigatório.</span>
+                    <span *ngIf="personAddressForm.controls.Country.errors?.maxlength">O País deve ter no máximo 255 caracteres.</span>
+                </mat-error>
             </mat-form-field>
         </div>
     </form>
