--- a/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
+++ b/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
@@ -84,8 +84,8 @@
             (isOpenChange)="isOpenChange()">
             <a class="nav-link dropdown-toggle" href id="basic-link" dropdownToggle (click)="false"
                 aria-controls="basic-link-dropdown">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">John Doe</span>
-                <img class="img-profile rounded-circle" src="../../../../assets/img/bg-profile-default.png">
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{userPersonName}}</span>
+                <img class="img-profile rounded-circle" src="{{userPersonProfilePic}}">
             </a>
             <ul id="basic-link-dropdown" *dropdownMenu
                 class="dropdown-menu dropdown-menu-right shadow animated--grow-in" role="menu"
